- Added ReflectionClass::newInstanceArgs($args). (Marcus)
- Added imap_savebody() that allows message body to be written to a file. (Mike)
- Fixed imagecolorallocate() and imagecolorallocatelapha() to return FALSE
  on error. (Pierre)
- Fixed bug #36295 (typo in SplFileObject::flock() parameter name). (Tony)
- Fixed bug #36287 (Segfault with SplFileInfo conversion). (Marcus)
- Fixed bug #36268 (Object destructors called even after fatal errors). (Dmitry)
- Fixed bug #36258 (SplFileObject::getPath() may lead to segfault). (Tony)
- Fixed bug #36242 (Possible memory corruption in stream_select()). (Tony)
- Fixed bug #36235 (ocicolumnname returns false before a succesfull fetch). 
  (Tony)
- Fixed bug #36226 (Inconsistent handling when passing potential arrays).
  (Dmitry)
- Fixed bug #36224 (date(DATE_ATOM) gives wrong results). (Derick, Hannes
  Magnusson)
- Fixed bug #36222 (errorInfo in PDOException is always NULL). (Ilia)
- Fixed bug #36208 (symbol namespace conflicts using bundled gd). (Jakub Moc)
- Fixed bug #36185 (str_rot13() crash on non-string parameter). (Pierre)
- Fixed bug #36176 (PDO_PGSQL - PDO::exec() does not return number of rows 
  affected by the operation). (Ilia)
- Fixed bug #36158 (SIGTERM is not handled correctly when running as a FastCGI
  server). (Dmitry)
- Fixed bug #36152 (problems with curl+ssl and pgsql+ssl in same PHP). (Mike)
- Fixed bug #36148 (unpack("H*hex", $data) is adding an extra character to the 
  end of the string). (Ilia)
- Fixed bug #36134 (DirectoryIterator constructor failed to detect empty 
  directory names). (Ilia)
- Fixed bug #36113 (Reading records of unsupported type causes segfault). 
  (Tony)
- Fixed bug #36096 (oci_result() returns garbage after oci_fetch() failed). 
  (Tony)
- Fixed bug #36071 (Engine Crash related with 'clone'). (Dmitry)
- Fixed bug #36055 (possible OCI8 crash in multithreaded environment). (Tony)
- Fixed bug #36046 (parse_ini_file() miscounts lines in multi-line values).
  (Ilia)